crates/pg_syntax/tests/snapshots/postgres_regress/jsonb_jsonpath@135.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select jsonb '{\"a\": {\"b\": 1}}' @? '$.**{1}.b ? ( @ > 0)';"
---
SelectStmt@0..57
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..56
    Ident@7..12 "jsonb"
    Whitespace@12..13 " "
    AExpr@13..56
      TypeCast@13..30
        AConst@13..30
          Sconst@13..30 "'{\"a\": {\"b\": 1}}'"
      Whitespace@30..31 " "
      Op@31..33 "@?"
      Whitespace@33..34 " "
      AConst@34..56
        Sconst@34..56 "'$.**{1}.b ? ( @ > 0)'"
  Ascii59@56..57 ";"

