crates/pg_syntax/tests/snapshots/postgres_regress/jsonb_jsonpath@136.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select jsonb '{\"a\": {\"b\": 1}}' @? '$.**{0 to last}.b ? ( @ > 0)';"
---
SelectStmt@0..65
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..64
    Ident@7..12 "jsonb"
    Whitespace@12..13 " "
    AExpr@13..64
      TypeCast@13..30
        AConst@13..30
          Sconst@13..30 "'{\"a\": {\"b\": 1}}'"
      Whitespace@30..31 " "
      Op@31..33 "@?"
      Whitespace@33..34 " "
      AConst@34..64
        Sconst@34..64 "'$.**{0 to last}.b ?  ..."
  Ascii59@64..65 ";"

