crates/pg_syntax/tests/snapshots/postgres_regress/jsonb_jsonpath@138.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select jsonb '{\"a\": {\"b\": 1}}' @? '$.**{1 to 2}.b ? ( @ > 0)';"
---
SelectStmt@0..62
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..61
    Ident@7..12 "jsonb"
    Whitespace@12..13 " "
    AExpr@13..61
      TypeCast@13..30
        AConst@13..30
          Sconst@13..30 "'{\"a\": {\"b\": 1}}'"
      Whitespace@30..31 " "
      Op@31..33 "@?"
      Whitespace@33..34 " "
      AConst@34..61
        Sconst@34..61 "'$.**{1 to 2}.b ? ( @ ..."
  Ascii59@61..62 ";"

