crates/pg_syntax/tests/snapshots/postgres_regress/jsonb_jsonpath@141.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "select jsonb '{\"a\": {\"c\": {\"b\": 1}}}' @? '$.**{1}.b ? ( @ > 0)';"
---
SelectStmt@0..64
  Select@0..6 "select"
  Whitespace@6..7 " "
  ResTarget@7..63
    Ident@7..12 "jsonb"
    Whitespace@12..13 " "
    AExpr@13..63
      TypeCast@13..37
        AConst@13..37
          Sconst@13..37 "'{\"a\": {\"c\": {\"b\": 1}}}'"
      Whitespace@37..38 " "
      Op@38..40 "@?"
      Whitespace@40..41 " "
      AConst@41..63
        Sconst@41..63 "'$.**{1}.b ? ( @ > 0)'"
  Ascii59@63..64 ";"

